gitops/goalora-app/goal-setter-react-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: goal-setter-react
  labels:
    app: goal-setter-react
    app.kubernetes.io/component: goal-setter-react
    app.kubernetes.io/instance: goal-setter-react
    app.kubernetes.io/name: goal-setter-react
    app.kubernetes.io/part-of: goal-setter-react
    app.openshift.io/runtime: httpd
    app.openshift.io/runtime-version: 2.4-el7
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: goal-setter-react
    deployment: goal-setter-react
